@@ -65,6 +65,8 @@ Relase date to be decided, codename to be chosen.
   flashing on sessions implementations which use external storage.
 - Changed the behavior of tuple return values from functions.  They are no
   longer arguments to the response object, they now have a defined meaning.
+- Added :attr:`flask.Flask.request_globals_class` to allow a specific class to
+  be used on creation of the :data:`~flask.g` instance of each request.
 
 Version 0.8.1
 -------------
